Arranged picture and spacing correctly on home page- next is button arrangement

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -72,7 +72,7 @@ font-family: 'Open Sans', 'sans-serif'
 // Styles for upper text and image on home page
 .header-box {
   position: relative;
-  margin-top: 10px;
+  margin-top: 100px;
   font-family: Montserrat, sans-serif;
 }
 
@@ -91,16 +91,15 @@ font-family: 'Open Sans', 'sans-serif'
 }
 
 .text-upper {
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: 32px;
-    width: 100%;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 32px;
+  width: 100%;
   box-sizing: border-box;
   font-family: 'Open Sans',Arial,sans-serif !important;
   display: block;
   margin: 60px 0 60px 0;
   line-height: 1.3 !important;
-
  padding-top: 50px;
 }
 
@@ -108,23 +107,23 @@ font-family: 'Open Sans', 'sans-serif'
 .paragraph-upper {
   font-weight: 400;
   font-family: 'Montserrat',sans-serif !important;
-  
   width: 100%;
   box-sizing: border-box;
   font-size: 24px;
   display: block;
-  margin: 60px 0 60px 0;
+  margin: 10px 0 60px 0;
   line-height: 1.3 !important;
 
 }
 
 // Thist is just buffer to push the page down
 p {
-      display: block;
+    display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+    padding-bottom: 20px;
 }
 
 .home-callout{
